- Added --server-type / -y parameter
- Use variable time logic update to better adjust to the framerate
- Re-download updates when their checksum no longer matches
- Enabled resizing windows from all sides
- Enabled whispers in tabs by default
- Made pickup notifications to appear as particle instead of text by default
- Made names update immediately when changing "Show gender" option
- Made client config statically typed and save as more structured XML
- Custom mouse cursor is now rendered by the system
- Limit shop's Max button to available carry weight
- Fixed slight stutter in being and player movement
- Fixed performance issue in BrowserBox (especially update/news window)
- Fixed handling of non-consecutive emote IDs
- Fixed securing of names in files created by chat logger
- Fixed wrong offset values for tab widget drawing
- Fixed positioning of window menu
- Fixed some issues with OpenGL rendering
- Fixed NPC disappearing when changing appearance on tmwAthena
- Fixed drawing issues with tiles that don't match the grid width
- Fixed --chat-log-dir also setting the screenshot directory
- Fixed tile animations for CSV maps
- Fixed settings window being unavailable when updating was done
- Fixed text clipping in tooltips
- Fixed handling of paths with special characters on Windows
- Fixed being popup getting stuck under the mouse
- Fixed item links with empty item name to look up name from Item DB
- Fixed spaces getting added to chat every 50 characters
- Fixed handling of consecutive text formatting markers
- Fixed empty Equipment window on freshly created character
- Fixed choosing default world when using -D command-line parameter
- Fixed storing of player relations
- Fixed handling of custom port in update URL
- Fixed stutter when new music starts playing
- Fixed keyboard setup to allow assigning keys before starting the game
- Fixed window move/resize blocking logic and rendering on Windows and macOS
- Updated to tmwAthena protocol changes